--- a/Model_Validation.ipynb
+++ b/Model_Validation.ipynb
@@ -31,7 +31,7 @@
     "import time\n",
     "\n",
     "C,D = Action.C, Action.D\n",
-    "action_map={0: D, 1: C}`"
+    "action_map={0: D, 1: C}"
    ]
   },
   {
