Changed settings to online_settings

--- a/DeterministicStrategyExperiments.ipynb
+++ b/DeterministicStrategyExperiments.ipynb
@@ -13,7 +13,7 @@
     "import pd_exp\n",
     "from helper_funcs import partitions\n",
     "from pathlib import Path\n",
-    "from settings import player_names, stag, high_t\n",
+    "from online_settings import player_names, stag, high_t\n",
     "import time, json"
    ]
   },
