--- a/Sensitivity_Analysis_PD_Model.ipynb
+++ b/Sensitivity_Analysis_PD_Model.ipynb
@@ -23,7 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import pd_exp2\n",
+    "import code.pd_exp2\n",
     "import random\n",
     "import seaborn as sns\n",
     "import time\n",
