--- a/Model_Validation.ipynb
+++ b/Model_Validation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2bc1055f-590a-493e-ba2e-926efca23f28",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import pd_exp2\n",
+    "import code.pd_exp2\n",
     "import random\n",
     "import seaborn as sns\n",
     "import time\n",
@@ -44,10 +44,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "65d070d3-920d-4c99-93d8-7ee10c8d09de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 player response probabilities: \n",
+      " [[0.5 0.5 0.5 0.5]\n",
+      " [0.5 0.5 0.5 0.5]\n",
+      " [0.5 0.5 0.5 0.5]\n",
+      " [0.5 0.5 0.5 0.5]\n",
+      " [0.5 0.5 0.5 0.5]\n",
+      " [0.5 0.5 0.5 0.5]]\n",
+      "LIST of initial moves:  [0 1 1 1 0 0]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd_exp2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-c612731621ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m# RPST payoff matrix - 3, 1, 0, 5 - classic config is also default\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mpd1000\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd_exp2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPdTournament\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplyrs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mdf1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf2\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpd1000\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpd1000\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0magg_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd_exp2' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Initialize player parameters (5 per player): \n",
     "#     The response probabilities to the preceding round of play (4)\n",
