--- a/DeterministicStrategyExperiments.ipynb
+++ b/DeterministicStrategyExperiments.ipynb
@@ -266,7 +266,7 @@
    "outputs": [],
    "source": [
     "with pd.option_context('display.max_rows', None, 'display.max_columns', None, 'display.max_colwidth', None):  # more options can be specified also\n",
-    "    display(classic_dataf[['System ID', 'Team1', 'Team2','Team3']])"
+    "    display(classic_dataf[['System ID', 'Team1', 'Team2']])"
    ]
   },
   {
@@ -277,7 +277,7 @@
    "outputs": [],
    "source": [
     "with pd.option_context('display.max_rows', None, 'display.max_columns', None, 'display.max_colwidth', None):  # more options can be specified also\n",
-    "    display(stagHunt_dataf[['System ID', 'Team1', 'Team2','Team3']])"
+    "    display(stagHunt_dataf[['System ID', 'Team1', 'Team2']])"
    ]
   },
   {
@@ -346,50 +346,6 @@
     "                            'Team2 Avg Score', 'Team2 Min Score', \n",
     "                            'Team2 Avg CC Dist']])"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "41168d7e-2536-4f98-b9c9-138294badafa",
-   "metadata": {},
-   "source": [
-    "How did team 3 perform across the two games being compared?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "710843ef-24bd-42db-8a55-81e5594ffc62",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with pd.option_context('display.max_rows', None, 'display.max_columns', None, \n",
-    "                       'display.max_colwidth', None):  # more options can be \n",
-    "                                                       # specified also\n",
-    "    display(classic_dataf.loc[0, ['Team3', 'Team3 Avg Score',\n",
-    "                            'Team3 Min Score', 'Team3 Avg CC Dist']])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "340c6f0d-24ed-4577-bc02-39818c6c0704",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with pd.option_context('display.max_rows', None, 'display.max_columns', None, \n",
-    "                       'display.max_colwidth', None):  # more options can be \n",
-    "                                                       # specified also\n",
-    "    display(stagHunt_dataf.loc[0, ['Team3', 'Team3 Avg Score',\n",
-    "                            'Team3 Min Score', 'Team3 Avg CC Dist']])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "897db71a-c96b-4b24-bb95-2970813df91c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
