Revised and included more text to notebook

--- a/DeterministicStrategyExperiments.ipynb
+++ b/DeterministicStrategyExperiments.ipynb
@@ -1,18 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2baea834-2933-459b-97c7-b20345fae3e3",
+   "metadata": {},
+   "source": [
+    "## Tutorial: Using pd_exp to create experiments with Prisoner's Dilemma Tournaments\n",
+    "This notebook walks through two different experimental setups to showcase the code functionality of the `pd_exp` module."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9ef4f417-0d8c-4e20-8e3c-dd20db9f068e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This notebook demonstrates code functionality with the modified Axelrod library. \n",
-    "# Refer to repo ReadMe for details to install the modified Axelrod library.\n",
-    "\n",
+    "# Local modules to import\n",
     "from code import pd_exp\n",
     "from code.helper_funcs import partitions\n",
     "from code.online_settings import player_names, stag, high_t\n",
+    "\n",
+    "# Other Python modules used\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "import time, json"
@@ -23,12 +32,12 @@
    "id": "845e1c40-0c33-434d-baff-7055e8ffd862",
    "metadata": {},
    "source": [
-    "This simulation was designed to collect data from multiple groups of round-robin tournaments. To keep vocabulary consistent, let me introduce some project terminology:\n",
+    "`pd_exp` was designed to collect data from multiple groups of round-robin tournaments. To keep vocabulary consistent, let me introduce some project terminology:\n",
     "- Supergame: a single PD instance between two players that consists of one or more rounds of play.\n",
     "- Tournament: a round-robin tournament between a select group of players. This concept can also be referred to as a team.\n",
     "- System: a collection of one or more teams.\n",
     "\n",
-    "In the code below, I setup data collection for two different experiments. In experiment 1, I consider how the outcome differs for one system with one team of deterministic players in two different game variations: classic PD and Stag Hunt. "
+    "In the code below, I setup data collection for two different experiments. In experiment 1, we consider how measured outcomes differ within one team of deterministic players in two different game variations: classic PD and Stag Hunt. In experiment 2, we expand on experiment 1 to consider multiple different systems, where each system is comprised of two teams."
    ]
   },
   {
@@ -47,7 +56,7 @@
    "outputs": [],
    "source": [
     "### For experiment 1\n",
-    "# Since this simulation gathers data for systems, I needed to code systems as ordered-lists of \n",
+    "# Since this simulation gathers data for systems, I coded systems as ordered-lists of \n",
     "# teams. To implement ordered-lists of teams I nested player_names within closed-brackets and then a tuple to create an ordered-list.\n",
     "# The simulation code allows for processing numerous systems, so I enclose the tournament within another pair\n",
     "# of closed-brackets and then a tuple.\n",
@@ -83,6 +92,7 @@
     "\n",
     "\n",
     "print('Running experiments and computing data')\n",
+    "# To generate the simulation data and compute the group metrics, I use the run_experiments() method.\n",
     "classic_pdExp.run_experiments()\n",
     "stag_pdExp.run_experiments()\n",
     "\n",
@@ -101,7 +111,7 @@
    "id": "dbd49588-00e9-4dd8-bf34-ea850b236210",
    "metadata": {},
    "source": [
-    "Experiment 1: Data Comparison Across Games"
+    "#### Experiment 1: Data Comparison Across Games"
    ]
   },
   {
@@ -111,6 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Retrieve saved data\n",
     "classic_dataf1 = pd.read_csv('Data/Experiment1/ClassicPD_test_DELETE_RPST_3_1_0_5.csv', index_col=0)\n",
     "stagHunt_dataf1 = pd.read_csv('Data/Experiment1/StagHunt_test_DELETE_RPST_5_1_0_3.csv', index_col=0)"
    ]
@@ -122,6 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# I use option_context to customize the limits of the dataframe display\n",
     "with pd.option_context('display.max_rows', None, 'display.max_columns', None, 'display.max_colwidth', None):  # more options can be specified also\n",
     "    display(classic_dataf1[['System ID', 'Team1', 'Team1 Avg Score',\n",
     "       'Team1 Min Score', 'Team1 Avg CC Dist']])"
@@ -142,21 +154,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2d1436d-7eb0-4d0d-a22f-5ff5ee807509",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4b29d674-cb2d-436a-b81b-50ab3a6afc61",
    "metadata": {},
    "outputs": [],
    "source": [
     "# SIDENOTE: Documentation (i.e. docstring) for code can be retrieved with '?'. Here are some examples.\n",
     "\n",
-    "?pd_exp.PdExp"
+    "?pd_exp"
    ]
   },
   {
@@ -166,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "?pd_exp"
+    "?pd_exp.PdExp"
    ]
   },
   {
@@ -185,6 +189,10 @@
    "outputs": [],
    "source": [
     "### For experiment 2\n",
+    "# To create numerous systems with a partitioned list of teams can take time, so I save the tuple of systems \n",
+    "# to file immediately after computing all k-partition subsets of a set of players  to avoid having to recompute \n",
+    "# them at each run.\n",
+    "\n",
     "# Checking for txt file with list of systems\n",
     "p = Path('partition_list_teams_of5_DEMO.txt')\n",
     "if p.exists():\n",
@@ -210,8 +218,6 @@
     "start_time = time.time()\n",
     "\n",
     "print('Instantiate PD Experiments with different game types')\n",
-    "# To instantiate a PD Experiment, I use the PDExp constructor with a partition list and game-type, which is \n",
-    "# by default the classic PD)\n",
     "classic_pdExp = pd_exp.PdExp(part_list)\n",
     "stag_pdExp = pd_exp.PdExp(part_list,game_type=stag)\n",
     "\n",
@@ -232,7 +238,7 @@
    "id": "01b23990-3610-496b-81ea-2817bde8768f",
    "metadata": {},
    "source": [
-    "Experiment 2: Data Comparison Across Systems, Teams, and Games"
+    "#### Experiment 2: Data Comparison Across Systems, Teams, and Games"
    ]
   },
   {
@@ -242,8 +248,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Let's compare the results\n",
+    "# Retrieve the stored data\n",
     "classic_dataf = pd.read_csv('Data/Experiment2/ClassicPD_4x3_12uniq_DEMO_RPST_3_1_0_5.csv', index_col=0)\n",
     "stagHunt_dataf = pd.read_csv('Data/Experiment2/StagHunt_4x3_12uniq_DEMO_RPST_5_1_0_3.csv', index_col=0)\n",
+    "\n",
+    "# Reset the index to accurately count the total systems\n",
     "classic_dataf = classic_dataf.reset_index(drop=True)\n",
     "stagHunt_dataf = stagHunt_dataf.reset_index(drop=True)"
    ]
@@ -255,6 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The computed results create a large spreadsheet or dataframe. Here is a list of just the column names.\n",
     "classic_dataf.columns"
    ]
   },
@@ -285,7 +296,7 @@
    "id": "b533adcd-2da0-4565-ae0f-a16f45e4c2cf",
    "metadata": {},
    "source": [
-    "How do the systems compare within the same game?"
+    "#### How do the systems compare within the same game?"
    ]
   },
   {
@@ -315,7 +326,7 @@
    "id": "0555f046-de39-4fe5-be41-0d3dd4375b2b",
    "metadata": {},
    "source": [
-    "How did team 1 and 2 performance differ across systems?"
+    "#### How did team 1 and 2 performance differ across systems?"
    ]
   },
   {
