Removed online_settings.py

--- a/DeterministicStrategyExperiments.ipynb
+++ b/DeterministicStrategyExperiments.ipynb
@@ -19,7 +19,7 @@
     "# Local modules to import\n",
     "from code import pd_exp\n",
     "from code.helper_funcs import partitions\n",
-    "from code.online_settings import player_names, stag, high_t\n",
+    "from code.settings import player_names, stag\n",
     "\n",
     "# Other Python modules used\n",
     "import pandas as pd\n",
@@ -357,6 +357,14 @@
     "                            'Team2 Avg Score', 'Team2 Min Score', \n",
     "                            'Team2 Avg CC Dist']])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a41c640c-32d7-43f0-bb42-bc920a5a9045",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
