--- a/Sensitivity_Analysis_PD_Model.ipynb
+++ b/Sensitivity_Analysis_PD_Model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +50,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Five player response probabilities: \n",
+      " [[1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]]\n",
+      "LIST of initial moves: \n",
+      "[0, 0, 0, 0, 0]\n",
+      "[1, 0, 0, 0, 0]\n",
+      "[1, 1, 0, 0, 0]\n",
+      "[1, 1, 1, 0, 0]\n",
+      "[1, 1, 1, 1, 0]\n",
+      "[1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize player parameters - each player has a set of four response\n",
     "# probabilities and an initial move:\n",
@@ -73,11 +93,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instantiating tournament object with these players:  Generic Memory One Player,Generic Memory One Player,Generic Memory One Player,Generic Memory One Player,Generic Memory One Player\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Playing matches: 100%|██████████| 15/15 [00:58<00:00,  3.91s/it]\n",
+      "Analysing: 100%|██████████| 25/25 [00:01<00:00, 23.91it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instantiating tournament object with these players:  Generic Memory One Player,Generic Memory One Player,Generic Memory One Player,Generic Memory One Player,Generic Memory One Player\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Playing matches: 100%|██████████| 15/15 [00:55<00:00,  3.73s/it]\n",
+      "Analysing: 100%|██████████| 25/25 [00:00<00:00, 28.11it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instantiating tournament object with these players:  Generic Memory One Player,Generic Memory One Player,Generic Memory One Player,Generic Memory One Player,Generic Memory One Player\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Playing matches: 100%|██████████| 15/15 [01:01<00:00,  4.07s/it]\n",
+      "Analysing: 100%|██████████| 25/25 [00:00<00:00, 25.94it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instantiating tournament object with these players:  Generic Memory One Player,Generic Memory One Player,Generic Memory One Player,Generic Memory One Player,Generic Memory One Player\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Playing matches: 100%|██████████| 15/15 [01:03<00:00,  4.22s/it]\n",
+      "Analysing: 100%|██████████| 25/25 [00:00<00:00, 41.73it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instantiating tournament object with these players:  Generic Memory One Player,Generic Memory One Player,Generic Memory One Player,Generic Memory One Player,Generic Memory One Player\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Playing matches: 100%|██████████| 15/15 [00:54<00:00,  3.64s/it]\n",
+      "Analysing: 100%|██████████| 25/25 [00:01<00:00, 22.49it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instantiating tournament object with these players:  Generic Memory One Player,Generic Memory One Player,Generic Memory One Player,Generic Memory One Player,Generic Memory One Player\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Playing matches: 100%|██████████| 15/15 [01:00<00:00,  4.05s/it]\n",
+      "Analysing: 100%|██████████| 25/25 [00:00<00:00, 38.60it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tournaments took 360.90249013900757 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "params = five_four_params\n",
     "data_dict1 = {}\n",
@@ -102,9 +228,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>initial_moves(as one-count)</th>\n",
+       "      <th>P1_Avg_Norm_Score</th>\n",
+       "      <th>P2_Avg_Norm_Score</th>\n",
+       "      <th>P3_Avg_Norm_Score</th>\n",
+       "      <th>P4_Avg_Norm_Score</th>\n",
+       "      <th>P5_Avg_Norm_Score</th>\n",
+       "      <th>Avg_of_PL_Scores</th>\n",
+       "      <th>Scores_L2_Dist</th>\n",
+       "      <th>Avg_CC_Distribution</th>\n",
+       "      <th>CC_L1_Dist</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2.489632</td>\n",
+       "      <td>2.514715</td>\n",
+       "      <td>2.508980</td>\n",
+       "      <td>2.490454</td>\n",
+       "      <td>2.496311</td>\n",
+       "      <td>2.500019</td>\n",
+       "      <td>40.384844</td>\n",
+       "      <td>0.896116</td>\n",
+       "      <td>0.103884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2.234449</td>\n",
+       "      <td>2.760158</td>\n",
+       "      <td>2.766321</td>\n",
+       "      <td>2.764996</td>\n",
+       "      <td>2.739720</td>\n",
+       "      <td>2.653129</td>\n",
+       "      <td>35.762422</td>\n",
+       "      <td>0.896116</td>\n",
+       "      <td>0.103884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2.418531</td>\n",
+       "      <td>2.456155</td>\n",
+       "      <td>2.998372</td>\n",
+       "      <td>3.008509</td>\n",
+       "      <td>2.989283</td>\n",
+       "      <td>2.774170</td>\n",
+       "      <td>33.460895</td>\n",
+       "      <td>0.906280</td>\n",
+       "      <td>0.093720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2.611536</td>\n",
+       "      <td>2.630193</td>\n",
+       "      <td>2.630514</td>\n",
+       "      <td>3.248149</td>\n",
+       "      <td>3.242292</td>\n",
+       "      <td>2.872537</td>\n",
+       "      <td>30.990106</td>\n",
+       "      <td>0.927165</td>\n",
+       "      <td>0.072835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2.817443</td>\n",
+       "      <td>2.812828</td>\n",
+       "      <td>2.810244</td>\n",
+       "      <td>2.803952</td>\n",
+       "      <td>3.503689</td>\n",
+       "      <td>2.949631</td>\n",
+       "      <td>25.359131</td>\n",
+       "      <td>0.958253</td>\n",
+       "      <td>0.041747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      initial_moves(as one-count)  P1_Avg_Norm_Score  P2_Avg_Norm_Score  \\\n",
+       "1000                            0           2.489632           2.514715   \n",
+       "1000                            1           2.234449           2.760158   \n",
+       "1000                            2           2.418531           2.456155   \n",
+       "1000                            3           2.611536           2.630193   \n",
+       "1000                            4           2.817443           2.812828   \n",
+       "1000                            5           3.000000           3.000000   \n",
+       "\n",
+       "      P3_Avg_Norm_Score  P4_Avg_Norm_Score  P5_Avg_Norm_Score  \\\n",
+       "1000           2.508980           2.490454           2.496311   \n",
+       "1000           2.766321           2.764996           2.739720   \n",
+       "1000           2.998372           3.008509           2.989283   \n",
+       "1000           2.630514           3.248149           3.242292   \n",
+       "1000           2.810244           2.803952           3.503689   \n",
+       "1000           3.000000           3.000000           3.000000   \n",
+       "\n",
+       "      Avg_of_PL_Scores  Scores_L2_Dist  Avg_CC_Distribution  CC_L1_Dist  \n",
+       "1000          2.500019       40.384844             0.896116    0.103884  \n",
+       "1000          2.653129       35.762422             0.896116    0.103884  \n",
+       "1000          2.774170       33.460895             0.906280    0.093720  \n",
+       "1000          2.872537       30.990106             0.927165    0.072835  \n",
+       "1000          2.949631       25.359131             0.958253    0.041747  \n",
+       "1000          3.000000        0.000000             1.000000    0.000000  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Process aggregate data of each tournament into a single dataframe for \n",
     "# comparison\n",
