Included explanation of metrics used and SYS ID nomenclature

--- a/DeterministicStrategyExperiments.ipynb
+++ b/DeterministicStrategyExperiments.ipynb
@@ -33,11 +33,42 @@
    "metadata": {},
    "source": [
     "`pd_exp` was designed to collect data from multiple groups of round-robin tournaments. To keep vocabulary consistent, let me introduce some project terminology:\n",
-    "- Supergame: a single PD instance between two players that consists of one or more rounds of play.\n",
-    "- Tournament: a round-robin tournament between a select group of players. This concept can also be referred to as a team.\n",
-    "- System: a collection of one or more teams.\n",
+    "- _Supergame_: a single PD instance between two players that consists of one or more rounds of play.\n",
+    "- _Tournament_: a round-robin tournament between a select group of players. This concept can also be referred to as a team.\n",
+    "- _System_: a collection of one or more teams.\n",
     "\n",
-    "In the code below, I setup data collection for two different experiments. In experiment 1, we consider how measured outcomes differ within one team of deterministic players in two different game variations: classic PD and Stag Hunt. In experiment 2, we expand on experiment 1 to consider multiple different systems, where each system is comprised of two teams."
+    "In the code below, I setup data collection for two different experiments. In experiment 1, we consider how measured outcomes differ within one team of deterministic players in two different game variations: classic PD and Stag Hunt. In experiment 2, we expand on experiment 1 to consider multiple different systems, where each system is comprised of two teams.\n",
+    "\n",
+    "#### __Team Metrics__\n",
+    "To measure team outcomes, we use the following metrics: 1) minimum of normalized player scores, 2) average of normalized player scores, and 3) average normalized CC distribution.\n",
+    "\n",
+    "##### __The Minumum (Min Score) and Average (Avg Score) of Normalized Player Scores__\n",
+    "The normalized score for a player, $j$, is computed as \n",
+    "$$\n",
+    "S_j = \\sum_{i\\neq j} \\frac{\\text{Score-per-turn against opponent } i}{\\text{Total opponents}} = \\frac{1}{\\text{Total opponents}} \\sum_{i\\neq j} \\frac{S_{ji}}{T_{ji}},\n",
+    "$$\n",
+    "where $S_{ji}$ is player $j$'s score against player $i$ and $T_{ji}$ is the total turns played between player $j$ and $i$.\n",
+    "\n",
+    "The minimum and average values across all normalized player scores are taken as aggregate group measures to reflect group welfare.\n",
+    "\n",
+    "##### __The Average Normalized CC Distribution (Avg CC Dist)__\n",
+    "The normalized CC distribution for a player represents the proportion of turns where they and their opponent chose to cooperate (CC) out of the total turns given. The average across each player's normalized CC distribution is used as an aggregate measure for overall group cooperation. The average normalized CC distribution is computed as \n",
+    "\n",
+    "$$\n",
+    "\\frac{1}{N} \\sum_{j=1}^N \\frac{1}{N-1} \\sum_{i \\neq j} \\frac{CC \\text{ count against player } i}{\\text{total turns against player }i}\n",
+    "$$\n",
+    "\n",
+    "where $N$ is the total number of players in a model, $j$ is a given player, and $i$ is every other player.\n",
+    "\n",
+    "\n",
+    "#### __System Metrics__\n",
+    "To measure system outcomes, we extend the above metrics and use six different measures:\n",
+    "1. System Minimum Score (SYS MIN)\n",
+    "2. System Average Score (SYS AVG)\n",
+    "3. Minimum of Team Average Scores (Min of Team Avgs)\n",
+    "4. Average of Team Minimum Scores (Avg of Team Mins)\n",
+    "5. System CC Distribution Average (SYS CC Dist AVG)\n",
+    "6. System CC Distribution Average (SYS CC Dist MIN)"
    ]
   },
   {
@@ -45,7 +76,7 @@
    "id": "c188db13-d785-4a58-aeef-37de211d4782",
    "metadata": {},
    "source": [
-    "#### Experiment 1: Comparing team performance across classic PD and Stag Hunt"
+    "### Experiment 1: Comparing team performance across classic PD and Stag Hunt"
    ]
   },
   {
@@ -111,7 +142,7 @@
    "id": "dbd49588-00e9-4dd8-bf34-ea850b236210",
    "metadata": {},
    "source": [
-    "#### Experiment 1: Data Comparison Across Games"
+    "### Experiment 1: Data Comparison Across Games"
    ]
   },
   {
@@ -124,6 +155,15 @@
     "# Retrieve saved data\n",
     "classic_dataf1 = pd.read_csv('Data/Experiment1/ClassicPD_test_DELETE_RPST_3_1_0_5.csv', index_col=0)\n",
     "stagHunt_dataf1 = pd.read_csv('Data/Experiment1/StagHunt_test_DELETE_RPST_5_1_0_3.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99fcab3d-e26c-415c-88f1-3550e787db80",
+   "metadata": {},
+   "source": [
+    "#### _The System ID_\n",
+    "Since these experiments are with unique players, each system is denoted with a unique ID that is comprised of numbers, commas, and underscores. The numbers represent players and determined by the alphabetical order of the player's strategy out of the total set of player strategies in system. The commas delimit players of the same team, and underscores delimit different teams of the same system. Note the system IDs and team compositions below and how they differ between experiment 1 and experiment 2. "
    ]
   },
   {
@@ -178,7 +218,7 @@
    "id": "45dbfc3c-5105-4768-9777-e9d859b9e0d6",
    "metadata": {},
    "source": [
-    "#### Experiment 2: Comparing systems of 3 teams across classic PD and Stag Hunt"
+    "### Experiment 2: Comparing systems of 3 teams across classic PD and Stag Hunt"
    ]
   },
   {
@@ -238,7 +278,7 @@
    "id": "01b23990-3610-496b-81ea-2817bde8768f",
    "metadata": {},
    "source": [
-    "#### Experiment 2: Data Comparison Across Systems, Teams, and Games"
+    "### Experiment 2: Data Comparison Across Systems, Teams, and Games"
    ]
   },
   {
